--- a/COVID_DETECTION.ipynb
+++ b/COVID_DETECTION.ipynb
@@ -45,60 +45,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d41fa126-fa63-47e0-c2f6-213bbfcc3385"
+        "outputId": "70c44b76-ad6f-4eee-b515-118305932d8c"
       },
       "source": [
-        "!git clone !git clone https://github.com/deepanrajm/Covid-19.git.git"
+        "!git clone https://drive.google.com/drive/folders/1dFnmEKmmEZeZY8PE5REduoeW7F7W5hdS?usp=sharing.git"
       ],
-      "execution_count": 5,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "fatal: Too many arguments.\n",
-            "\n",
-            "usage: git clone [<options>] [--] <repo> [<dir>]\n",
-            "\n",
-            "    -v, --verbose         be more verbose\n",
-            "    -q, --quiet           be more quiet\n",
-            "    --progress            force progress reporting\n",
-            "    -n, --no-checkout     don't create a checkout\n",
-            "    --bare                create a bare repository\n",
-            "    --mirror              create a mirror repository (implies bare)\n",
-            "    -l, --local           to clone from a local repository\n",
-            "    --no-hardlinks        don't use local hardlinks, always copy\n",
-            "    -s, --shared          setup as shared repository\n",
-            "    --recurse-submodules[=<pathspec>]\n",
-            "                          initialize submodules in the clone\n",
-            "    -j, --jobs <n>        number of submodules cloned in parallel\n",
-            "    --template <template-directory>\n",
-            "                          directory from which templates will be used\n",
-            "    --reference <repo>    reference repository\n",
-            "    --reference-if-able <repo>\n",
-            "                          reference repository\n",
-            "    --dissociate          use --reference only while cloning\n",
-            "    -o, --origin <name>   use <name> instead of 'origin' to track upstream\n",
-            "    -b, --branch <branch>\n",
-            "                          checkout <branch> instead of the remote's HEAD\n",
-            "    -u, --upload-pack <path>\n",
-            "                          path to git-upload-pack on the remote\n",
-            "    --depth <depth>       create a shallow clone of that depth\n",
-            "    --shallow-since <time>\n",
-            "                          create a shallow clone since a specific time\n",
-            "    --shallow-exclude <revision>\n",
-            "                          deepen history of shallow clone, excluding rev\n",
-            "    --single-branch       clone only one branch, HEAD or --branch\n",
-            "    --no-tags             don't clone any tags, and make later fetches not to follow them\n",
-            "    --shallow-submodules  any cloned submodules will be shallow\n",
-            "    --separate-git-dir <gitdir>\n",
-            "                          separate git dir from working tree\n",
-            "    -c, --config <key=value>\n",
-            "                          set config inside the new repository\n",
-            "    -4, --ipv4            use IPv4 addresses only\n",
-            "    -6, --ipv6            use IPv6 addresses only\n",
-            "    --filter <args>       object filtering\n",
-            "\n"
+            "Cloning into '1dFnmEKmmEZeZY8PE5REduoeW7F7W5hdS?usp=sharing'...\n",
+            "fatal: https://drive.google.com/drive/folders/1dFnmEKmmEZeZY8PE5REduoeW7F7W5hdS?usp=sharing.git/info/refs not valid: is this a git repository?\n"
           ]
         }
       ]
